index.css
/*-- WHOLE-DOCUMENT STYLES --*/

:root {
  --primaryText: #eee;
  --secondaryText: #ddd;
  --primaryBackground: #112;
  --secondaryBackground: #223;
  --tertiaryBackground: #334;
  --primaryColor: #e0728c;
  --secondaryColor: #89befd;
  --successColor: #69da9c;
  --warningColor: #ddc77e;

  --headerHeight: 24px;
}

::-webkit-scrollbar {
  width: 12px;
  transition: all 0.3s ease-in-out;
}
::-webkit-scrollbar-track {
  background-color: var(--secondaryBackground);
  border-radius: 10px;
  transition: all 0.3s ease-in-out;
}
::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: var(--tertiaryBackground);
  transition: all 0.3s ease-in-out;
}

.w-70 {
  width: 70% !important;
}
.w-90 {
  width: 90% !important;
}

.w-95 {
  width: 95% !important;
}

body {
  font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
  font-size: 1.2em;
  color: var(--primaryText) !important;
  background-color: var(--primaryBackground);
  transition: all 0.3s ease-in-out;
}

/* Prevents body width issues on small screens */
.no-overflow {
  overflow-x: initial;
  background-color: var(--primaryBackground);
}

/* Secondary color thicker borders between sections */
.section-border-bottom.border-bottom {
  border-color: var(--secondaryColor) !important;
  border-bottom-width: 2px !important;
  transition: all 0.3s ease-in-out;
}

/* Primary color borders for certain text elements -
 * this is used in jumbotron and work cards
 */
h3.border-pink,
p.border-pink {
  border-color: var(--primaryColor) !important;
  transition: all 0.3s ease-in-out;
}

/* Changes all link colors (non-nav links are indicated with an icon) */
.nav-link,
a.project-link {
  color: var(--primaryText) !important;
}

/* scale cards on hover for large enough screens */
@media screen and (min-width: 576px) {
  .jumbotron-fluid:hover,
  .card-block:hover,
  .work-card:hover {
    transform: scale(1.05, 1.05);
    box-shadow: none;
  }
}

/*------------------------- NAVBAR -------------------------*/

.navbar-nav.rounded {
  background-color: var(--secondaryBackground);
  width: fit-content;
  float: right;
}
.nav-item.border {
  background-color: var(--tertiaryBackground) !important;
  border-color: var(--secondaryColor) !important;
  margin: 4px 6px;
  padding: 0px 6px;
  width: fit-content;
  float: right;
  transition: all 0.3s ease-in-out;
}

/* Override bootstrap default colors and add transition details for card-like components */
.navbar-toggler.border,
.work-card,
.card.card-block,
.jumbotron-fluid {
  background-color: var(--secondaryBackground) !important;
  border-color: var(--secondaryColor) !important;
  transition: all 0.3s ease-in-out;
}
.nav-item.border:hover {
  background-color: var(--tertiaryBackground) !important;
}

/*------------------------- ABOUT ME -------------------------*/

/* Constrain jumbotron dimensions */
.jumbotron-fluid {
  max-width: 1140px;
}
@media screen and (max-width: 575px) {
  .jumbotron-fluid {
    width: 100% !important;
  }
}

/* Wrap bio in border independent of second paragraph display state */
.bio-border-left {
  /* top border handled with bootstrap class on text tag */
  border-left: 1px solid var(--primaryColor);
  position: absolute;
  height: 80%;
  top: 1px;
  left: 0px;
  pointer-events: none;
  transition: all 0.3s ease-in-out;
}
.bio-border-bottom {
  border-right: 1px solid var(--primaryColor);
  border-bottom: 1px solid var(--primaryColor);
  position: absolute;
  height: 80%;
  width: 100%;
  bottom: -3px;
  right: 0px;
  pointer-events: none;
  transition: all 0.3s ease-in-out;
}
/* adjust for when second paragraph is not displayed */
@media screen and (min-width: 576px) {
  .bio-border-left {
    height: 50%;
  }
}

/* constrain bio image size, override bootstrap border color */
#selfie {
  max-height: 200px;
  max-width: 200px;
  border: 2px solid var(--primaryColor);
}
.img-link:hover {
  text-decoration: none;
}

/*------------------------- PREVIOUS WORK -------------------------*/

/* see page-wide selectors */

/*------------------------- PROJECTS -------------------------*/

/* Indicate external links with a simple icon */
.project-link:after {
  content: URL('../images/externalLink.png');
  width: 20px;
  height: 20px;
}

/* fix scrolling row dimensions for various screen sizes */
.flex-row.flex-nowrap {
  max-width: fit-content; /* centers on xxwide screens */
  height: 445px; /* min height */
}
/* md */
@media screen and (min-width: 768px) {
  .flex-row.flex-nowrap {
    height: 525px;
  }
}
/* lg */
@media screen and (min-width: 992px) {
  .flex-row.flex-nowrap {
    height: 670px;
  }
}

/* Fix card dimensions in harmony with row dimensions */
div.col-5 {
  min-width: 350px;
  max-width: 600px;
}
/* Final card */
div.col-12 {
  min-width: 360px !important;
  max-width: 500px !important;
  max-height: 620px !important;
}
/* fine-grain tweak for final card - title margin needs weird breakpoint */
@media screen and (min-width: 395px) and (max-width: 767px) {
  div.col-12 > div.card > h3.h5 {
    margin-bottom: 0.5rem !important;
  }
}

/* center project descriptions in their areas of the card */
p.project-description {
  height: 100%;
  display: flex;
  align-items: center;
}

/* fix project image dimensions */
.project-img {
  max-height: 300px;
  object-fit: contain;
}

/* Replicate similar borders found elsewhere on page */
.project-border-top {
  border-left: 1px solid var(--primaryColor);
  border-top: 1px solid var(--primaryColor);
  position: absolute;
  height: 70%;
  width: 93%;
  top: 15px;
  left: 10px;

  pointer-events: none;
  transition: all 0.3s ease-in-out;
}
.project-border-bottom {
  border-right: 1px solid var(--primaryColor);
  border-bottom: 1px solid var(--primaryColor);
  position: absolute;
  height: 70%;
  width: 93%;
  bottom: 15px;
  right: 10px;

  pointer-events: none;
  transition: all 0.3s ease-in-out;
}

/*------------------------- FORM -------------------------*/

/* give form background color and fix max width to prevent awkward proportions */
.form {
  background-color: var(--secondaryBackground);
  max-width: 900px !important;
}

/* Custom input surround color */
.form-control:focus {
  border-color: var(--primaryColor) !important;
  box-shadow: 0 0 0 0.2rem var(--primaryColor) !important;
}

/* Replicate similar borders found elsewhere on page */
.form-border-top {
  border-left: 1px solid var(--primaryColor);
  border-top: 1px solid var(--primaryColor);
  position: absolute;
  height: 70%;
  width: 95%;
  top: 25px;
  left: 2.25%;
  pointer-events: none;
  transition: all 0.3s ease-in-out;
}
.form-border-bottom {
  border-right: 1px solid var(--primaryColor);
  border-bottom: 1px solid var(--primaryColor);
  position: absolute;
  height: 70%;
  width: 95%;
  bottom: 25px;
  right: 2.25%;
  pointer-events: none;
  transition: all 0.3s ease-in-out;
}

/* Color form buttons and give them hover animations */
.border.form-btn {
  color: var(--primaryText) !important;
  background-color: var(--tertiaryBackground) !important;
  border-color: var(--primaryColor) !important;
  transition: all 0.3s ease-in-out !important;
}
.form-btn[type='submit']:hover {
  background-color: var(--successColor) !important;
  color: var(--primaryBackground) !important;
}
.form-btn[type='reset']:hover {
  background-color: var(--warningColor) !important;
  color: var(--primaryBackground) !important;
}

/*------------------------- FOOTER -------------------------*/

.btn#info-btn {
  color: var(--secondaryText);
  background-color: var(--tertiaryBackground);
  width: 40px;
  height: 40px;
  font-style: italic;
  font-family: 'Times New Roman', Times, serif;
  transition: all 0.3s ease-in-out;
}

.btn#theme-btn {
  color: var(--secondaryText);
  background-color: var(--tertiaryBackground);
  height: 40px;
  border-radius: 10px;
  transition: all 0.3s ease-in-out;
}

.btn.footer-btn:hover {
  border-color: var(--primaryColor);
}
.btn.footer-btn:active {
  background-color: var(--secondaryBackground);
  color: #46959b;
}

